kubernetes/device-registration-api-service.yml
apiVersion: v1
kind: Service
metadata:
  name: device-registration-api
  namespace: device-platform
  annotations:
      prometheus.io/scrape: "true"
      prometheus.io/port: "8000"
      prometheus.io/path: "/metrics"
spec:
  type: ClusterIP  # API interne
  selector:
    app: device-registration-api
  ports:
    - port: 8000
      targetPort: 8000
