kubernetes/statistic-api-service-lb.yml
apiVersion: v1
kind: Service
metadata:
  name: statistic-api
  namespace: device-platform
  annotations:
      prometheus.io/scrape: "true"
      prometheus.io/port: "8000"
      prometheus.io/path: "/metrics"
spec:
  type: LoadBalancer
  selector:
    app: statistic-api
  ports:
    - port: 80
      targetPort: 8000
