kubernetes/device-registration-api-networkPolicy-egress.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-device-registration-egress
  namespace: device-platform
spec:
  podSelector:
    matchLabels:
      app: device-registration-api
  policyTypes:
    - Egress
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: postgres
      ports:
        - protocol: TCP
          port: 5432
