kubernetes/hors-ligne-networkPolicy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
  namespace: device-platform
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
