kubernetes/postgres-networkPolicy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-postgres-from-apis
  namespace: device-platform
spec:
  podSelector:
    matchLabels:
      app: postgres
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: device-registration-api
        - podSelector:
            matchLabels:
              app: statistic-api
      ports:
        - protocol: TCP
          port: 5432
