kubernetes/statistic-api-networkPolicy-ingress.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-statistic-api-ingress
  namespace: device-platform
spec:
  podSelector:
    matchLabels:
      app: statistic-api
  policyTypes:
    - Ingress
  ingress:
    - from:
        - ipBlock:
            cidr: 0.0.0.0/0
      ports:
        - protocol: TCP
          port: 8000
